Fix visibility

--- a/SCSS/Modern Dark Theme.scss
+++ b/SCSS/Modern Dark Theme.scss
@@ -39,7 +39,7 @@
 	--red-text-dark: #FD776F;
 	--orange-text: #C26F1C;
 	--orange-text-dark: #F0A264;
-	--yellow-text: #615E00;
+	--yellow-text: #3E3C00;
 	--yellow-text-dark: #EFD10A;
 	--green-text: #34A853;
 	--green-text-dark: #3FCC5E;
